# fault-injection-protection

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.toml.in
.github/workflows/: ci.yml
examples/cfip_example/: Cargo.toml
examples/cfip_example/.cargo/: config.toml
examples/cfip_example/src/: main.rs
examples/firv2_example/: Cargo.toml  rust-toolchain.toml
examples/firv2_example/.cargo/: config.toml
examples/firv2_example/src/: lib.rs  main.rs
firv2/llvm-firv2/: CMakeLists.txt  firv2.cpp
firv2/rust-firv2/: Cargo.toml
firv2/rust-firv2/src/: lib.rs
firv2/rust-firv2/tests/: test.rs
llvm_plugin/: CMakeLists.txt  cfip.cpp
rust_attribute/: Cargo.toml
rust_attribute/src/: lib.rs
tests/: binop_acfip.ll  binop_cfip.ll  branch_test.ll  branch_test_clone_bb_if_needed.ll  firv2.ll  firv2_sret.ll  harden_all_fp.ll  harden_chosen.ll  harden_chosen_sret.ll  lit.cfg.py
